add image support

--- a/StoreSearch/DetailViewController.xib
+++ b/StoreSearch/DetailViewController.xib
@@ -65,12 +65,19 @@
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k57-2m-nh7">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k57-2m-nh7">
                             <rect key="frame" x="174" y="230" width="60" height="24"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="24" id="9Ic-Kx-bLf"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                            <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                             <state key="normal" title="$9.99">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="openInStore:" destination="-1" eventType="touchUpInside" id="9xw-b9-YMn"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Artist Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MPR-dz-1R7">
                             <rect key="frame" x="10" y="158" width="220" height="19"/>
@@ -82,7 +89,9 @@
                     <color key="backgroundColor" white="1" alpha="0.95000000000000007" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="240" id="2dL-E3-pui"/>
+                        <constraint firstAttribute="bottom" secondItem="k57-2m-nh7" secondAttribute="bottom" constant="6" id="POc-94-yXd"/>
                         <constraint firstAttribute="height" constant="260" id="blf-MX-bEW"/>
+                        <constraint firstAttribute="trailing" secondItem="k57-2m-nh7" secondAttribute="trailing" constant="6" id="ebr-G9-i2y"/>
                     </constraints>
                 </view>
             </subviews>
